# wsjcpp-dto

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  wsjcpp.yml
src/: main.cpp  wsjcpp_dto.cpp  wsjcpp_dto.h
src.wsjcpp/: CMakeLists.txt
unit-tests.wsjcpp/: CMakeLists.txt
unit-tests.wsjcpp/src/: unit_test_dto_person.cpp  unit_test_dto_person.h
